--- a/spotlight.html
+++ b/spotlight.html
@@ -72,44 +72,103 @@
 
      <div class="all-resources-list" id="additional-resources">
   <div class="resource-card">
-    <h3>Union County Food Pantry</h3>
-    <p>Providing food assistance to families in need.</p>
-    <a href="https://example.com/food-pantry" target="_blank">Visit Website</a>
+    <h3>Ninth District Opportunity – Union County</h3>
+    <p>Delivers community support services including food programs, housing assistance, and early childhood education resources.</p>
+    <a href="https://www.ndo.org/area/union/" target="_blank">Visit Website</a>
   </div>
 
   <div class="resource-card">
-    <h3>Senior Activity Center</h3>
-    <p>Programs and social events for older adults.</p>
-    <a href="https://example.com/senior-center" target="_blank">Visit Website</a>
+    <h3>Union County Department of Family & Children Services</h3>
+    <p>Provides public assistance programs, child welfare services, and family support for eligible residents.</p>
+    <a href="https://dfcs.georgia.gov/locations/union-county" target="_blank">Visit Website</a>
   </div>
 
   <div class="resource-card">
-    <h3>Mental Health Support Line</h3>
-    <p>Confidential support and counseling resources.</p>
-    <a href="https://example.com/mental-health" target="_blank">Visit Website</a>
-    </div>
+    <h3>Union County Senior Center</h3>
+    <p>Offers programs, activities, and services designed to support the health and well-being of older adults in the community.</p>
+    <a href="https://www.unioncountyga.gov/377/Senior-Center" target="_blank">Visit Website</a>
+  </div>
 
   
-       <div class="resource-card">
-  <h3>Job Assistance Center</h3>
-  <p>Resume help, job listings, and interview preparation.</p>
-  <a href="https://example.com/job-assistance" target="_blank">Visit Website</a>
-</div>
+  <div class="resource-card">
+    <h3>Union County Parks & Recreation</h3>
+    <p>Manages public parks, recreational facilities, and programs that promote outdoor activities and community wellness.</p>
+    <a href="https://www.unioncountyga.gov/256/Parks-Recreation" target="_blank">Visit Website</a>
+  </div>
 
-<div class="resource-card">
-  <h3>Family Support Services</h3>
-  <p>Helping families access housing, childcare, and financial aid.</p>
-  <a href="https://example.com/family-support" target="_blank">Visit Website</a>
-</div>
+  <div class="resource-card">
+    <h3>Union County Extension Office (UGA Extension)</h3>
+    <p>Provides educational resources and programs related to agriculture, family life, and youth development.</p>
+    <a href="https://extension.uga.edu/county-offices/union.html" target="_blank">Visit Website</a>
+  </div>
 
-<div class="resource-card">
-  <h3>Veterans Resource Office</h3>
-  <p>Support services and benefits assistance for local veterans.</p>
-  <a href="https://example.com/veterans-resources" target="_blank">Visit Website</a>
-</div>
+  <div class="resource-card">
+    <h3>Union County 4-H Program</h3>
+    <p>Offers youth development opportunities focused on leadership, education, and community involvement.</p>
+    <a href="https://extension.uga.edu/county-offices/union/4-h-youth-development.html" target="_blank">Visit Website</a>
+  </div>
 
-  
+  <div class="resource-card">
+    <h3>Blairsville City Hall</h3>
+    <p>Serves as the administrative center for city government services and public information.</p>
+    <a href="https://www.blairsville-ga.gov/administration" target="_blank">Visit Website</a>
+  </div>
 
+  <div class="resource-card">
+    <h3>Union County Health Department</h3>
+    <p>Provides public health services including immunizations, health education, and preventive care programs.</p>
+    <a href="https://phdistrict2.org/union-county-health-department/" target="_blank">Visit Website</a>
+  </div>
+
+  <div class="resource-card">
+    <h3>Union County Emergency Management Agency</h3>
+    <p>Coordinates emergency preparedness, response, and recovery efforts for Union County.</p>
+    <a href="https://www.unioncountyga.gov/205/Emergency-Management" target="_blank">Visit Website</a>
+  </div>
+
+  <div class="resource-card">
+    <h3>Union County Schools Community Programs</h3>
+    <p>Supports students and families through educational initiatives, extracurricular activities, and community partnerships.</p>
+    <a href="https://www.ucschools.org/" target="_blank">Visit Website</a>
+  </div> 
+
+  <div class="resource-card">
+    <h3>Union County Veteran Affairs</h3>
+    <p>Assists Veterans and their families with benefits, services, and access to local and federal support programs.</p>
+    <a href="https://veterans.georgia.gov/locations/blairsville" target="_blank">Visit Website</a>
+  </div> 
+
+  <div class="resource-card">
+    <h3>Union General Hospital</h3>
+    <p>Provides medical care, emergency services, and healthcare programs to residents of Union County and the surrounding areas.</p>
+    <a href="https://uniongeneralhealthsystem.com/facility/union-general-hospital/" target="_blank">Visit Website</a>
+  </div> 
+
+  <div class="resource-card">
+    <h3>Union County Sheriff's Office</h3>
+    <p>Provides law enforcement services and supports public safety initiatives in the community.</p>
+    <a href="https://www.unioncountygasheriff.org/index.html" target="_blank">Visit Website</a>
+  </div> 
+
+  <div class="resource-card">
+    <h3>Union County Public Library</h3>
+    <p>Provides free access to books, educational programs, and community meeting spaces for residents of Union County.</p>
+    <p><a href="https://www.mountainlibrary.com/locations/ucpl/" target="_blank">Visit Website</a></p>
+  </div>
+
+
+  <div class="resource-card">
+    <h3>Blairsville-Union County Chamber of Commerce</h3>
+    <p>Supports local businesses and promotes economic development, tourism, and community engagement in the Blairsville area.</p>
+    <p><a href="https://www.visitblairsvillega.com/" target="_blank">Visit Website</a></p>
+  </div>
+
+  <div class="resource-card">
+    <h3>Union County Resource Center</h3>
+    <p>Offers assistance programs and connections to essential services such as food, housing, and family support resources.</p>
+    <p><a href="https://www.localyouthcenter.com" target="_blank">Visit Website</a></p>
+  </div>
+       
     </section>
 
     <!-- SUBMISSION FORM -->
