--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
   <h2>What Our Community Says</h2>
     <div class="testimonial-cards">
       <div class="testimonial-card">
-        <p>"The community hub has really brought us all together. Amazing events and programs!"</p>
+        <p>"This community hub has really brought us all together. Amazing events and programs!"</p>
         <strong>- Jane D.</strong>
       </div>
       <div class="testimonial-card">
-        <p>"I love the local garden programs. They’re fantastic for families and kids."</p>
+        <p>"I love the local recreation and parks. They’re fantastic for families and kids."</p>
         <strong>- Mike R.</strong>
       </div>
       <div class="testimonial-card">
