--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <li><a href="index.html">Home</a></li>
     <li><a href="ourcommunity.html">Our Community</a></li>
     <li><a href="spotlight.html">Spotlight</a></li>
-    <li><a href="events.html">Events</a></li>
+    <li><a href="events.html">Events</a></li> 
+    <li><a href="history.html">About</a></li>
     <li><a href="about.html">About</a></li>
   </ul>
 </nav>
