--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><a href="ourcommunity.html">Our Community</a></li>
     <li><a href="spotlight.html">Spotlight</a></li>
     <li><a href="events.html">Events</a></li> 
-    <li><a href="history.html">About</a></li>
+    <li><a href="history.html">History</a></li>
     <li><a href="about.html">About</a></li>
   </ul>
 </nav>
@@ -70,6 +70,7 @@
           <li><a href="ourcommunity.html">Our Community</a></li>
           <li><a href="spotlight.html">Spotlight</a></li>
           <li><a href="events.html">Events</a></li>
+          <li><a href="history.html">History</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
