--- a/ourcommunity.html
+++ b/ourcommunity.html
@@ -15,6 +15,7 @@
         <li><a href="ourcommunity.html">Our Community</a></li>
         <li><a href="spotlight.html">Spotlight</a></li>
         <li><a href="events.html">Events</a></li>
+        <li><a href="history.html">History</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
@@ -42,6 +43,7 @@
           <li><a href="ourcommunity.html">Our Community</a></li>
           <li><a href="spotlight.html">Spotlight</a></li>
           <li><a href="events.html">Events</a></li>
+          <li><a href="history.html">History</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
