--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
         <li><a href="ourcommunity.html">Our Community</a></li>
         <li><a href="spotlight.html">Spotlight</a></li>
         <li><a href="events.html">Events</a></li>
+        <li><a href="history.html">History</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
@@ -35,6 +36,7 @@
           <li><a href="ourcommunity.html">Our Community</a></li>
           <li><a href="spotlight.html">Spotlight</a></li>
           <li><a href="events.html">Events</a></li>
+          <li><a href="history.html">History</a></li>
           <li><a href="about.html">About</a></li>
         </ul>
       </div>
