--- a/history.html
+++ b/history.html
@@ -34,16 +34,20 @@
   <main>
     <section id="history-content">
       <h2>Early Settlement</h2>
-      <p>Blairsville was established in the early 19th century and has a rich history connected to the Appalachian region, trade routes, and early settlers.</p>
+      <p>Blairsville, Georgia was established in 1835 after Union County was created during the Georgia Gold Rush of the early 1830s. Before European American settlement, the area was home to the Cherokee Nation, who lived there until they were removed during the Trail of Tears. After the land was opened to settlers through a land lottery system, farmers and gold seekers moved into the region, building small homes, churches, and businesses. Blairsville became the county seat because of its central location, and over time it grew into a small but important mountain community focused on agriculture, trade, and local government.
+</p>
 
       <h2>Historic Landmarks</h2>
-      <p>The town is home to several historic landmarks, including churches, old town halls, and preserved downtown buildings dating back to the 1800s.</p>
+      <p>Blairsville, Georgia is home to several historic landmarks that reflect its rich mountain heritage. One of the most well-known sites is the Union County Courthouse, built in 1899, which still stands in the center of town and represents the community’s early growth and importance as a county seat. Another important landmark is the Byron Herbert Reece Farm and Heritage Center, the preserved home of Georgia poet Byron Herbert Reece, which celebrates both local history and Appalachian culture. The area also features historic churches, cemeteries, and buildings that date back to the late 1800s and early 1900s, showing how early settlers lived and built their community. These landmarks help preserve Blairsville’s history and give visitors a glimpse into its past.
+</p>
 
       <h2>Cultural Heritage</h2>
-      <p>Blairsville celebrates its heritage with annual festivals, local museums, and events that showcase Appalachian culture, crafts, and history.</p>
+      <p>Blairsville, Georgia has a rich cultural heritage rooted in Appalachian traditions and mountain life. The community’s culture has been shaped by early settlers who valued hard work, faith, family, and a strong connection to the land. Many traditions, such as bluegrass music, storytelling, handmade crafts, and local festivals, continue to be celebrated today. Events like community fairs and seasonal festivals bring residents together and highlight local talent, food, and history. The influence of Cherokee history is also an important part of the area’s heritage, reminding visitors of the region’s deeper roots. Overall, Blairsville’s cultural heritage reflects a close-knit community that takes pride in preserving its traditions while continuing to grow and evolve.
+</p>
 
       <h2>Modern Development</h2>
-      <p>While preserving its past, Blairsville continues to grow as a vibrant community, balancing tourism, business, and local traditions.</p>
+      <p>In recent years, Blairsville, Georgia has experienced steady modern development while still maintaining its small-town charm. New businesses, restaurants, and shops have opened to serve both residents and visitors, especially as tourism in the North Georgia mountains continues to grow. Improvements to roads, schools, and community facilities have helped support a growing population and strengthen the local economy. Outdoor attractions such as hiking trails, Lake Nottely, and Brasstown Bald continue to draw visitors, encouraging development in lodging and recreation services. Despite these changes, Blairsville has worked to balance progress with preserving its natural beauty and historic character, allowing the town to grow without losing its strong sense of community.
+</p>
 
       <!-- Optional images -->
       <div class="history-images">
