--- a/history.html
+++ b/history.html
@@ -8,53 +8,65 @@
 </head>
 <body>
 
-  <!-- HEADER + NAV -->
-  <header>
+  <!-- NAVIGATION -->
+  <header class="main-header">
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="ourcommunity.html">Our Community</a></li>
         <li><a href="spotlight.html">Spotlight</a></li>
         <li><a href="events.html">Events</a></li>
-        <li><a href="history.html">History</a></li>
+        <li><a href="history.html" class="active">History</a></li>
         <li><a href="about.html">About</a></li>
       </ul>
     </nav>
-
-    <!-- Hero Image -->
-    <section class="history-hero">
-      <div class="hero-text">
-        <h1>Blairsville History</h1>
-        <p>Discover the rich history and heritage of Blairsville, Georgia.</p>
-      </div>
-    </section>
   </header>
 
+  <!-- HERO SECTION -->
+  <section class="history-hero">
+    <div class="hero-overlay">
+      <h1>Blairsville History</h1>
+      <p>Discover the rich history and heritage of Blairsville, Georgia.</p>
+    </div>
+  </section>
+
   <!-- MAIN CONTENT -->
-  <main>
-    <section id="history-content">
+  <main class="history-container">
+
+    <section class="history-section">
       <h2>Early Settlement</h2>
-      <p>Blairsville, Georgia was established in 1835 after Union County was created during the Georgia Gold Rush of the early 1830s. Before European American settlement, the area was home to the Cherokee Nation, who lived there until they were removed during the Trail of Tears. After the land was opened to settlers through a land lottery system, farmers and gold seekers moved into the region, building small homes, churches, and businesses. Blairsville became the county seat because of its central location, and over time it grew into a small but important mountain community focused on agriculture, trade, and local government.
-</p>
-
-      <h2>Historic Landmarks</h2>
-      <p>Blairsville, Georgia is home to several historic landmarks that reflect its rich mountain heritage. One of the most well-known sites is the Union County Courthouse, built in 1899, which still stands in the center of town and represents the community’s early growth and importance as a county seat. Another important landmark is the Byron Herbert Reece Farm and Heritage Center, the preserved home of Georgia poet Byron Herbert Reece, which celebrates both local history and Appalachian culture. The area also features historic churches, cemeteries, and buildings that date back to the late 1800s and early 1900s, showing how early settlers lived and built their community. These landmarks help preserve Blairsville’s history and give visitors a glimpse into its past.
-</p>
-
-      <h2>Cultural Heritage</h2>
-      <p>Blairsville, Georgia has a rich cultural heritage rooted in Appalachian traditions and mountain life. The community’s culture has been shaped by early settlers who valued hard work, faith, family, and a strong connection to the land. Many traditions, such as bluegrass music, storytelling, handmade crafts, and local festivals, continue to be celebrated today. Events like community fairs and seasonal festivals bring residents together and highlight local talent, food, and history. The influence of Cherokee history is also an important part of the area’s heritage, reminding visitors of the region’s deeper roots. Overall, Blairsville’s cultural heritage reflects a close-knit community that takes pride in preserving its traditions while continuing to grow and evolve.
-</p>
-
-      <h2>Modern Development</h2>
-      <p>In recent years, Blairsville, Georgia has experienced steady modern development while still maintaining its small-town charm. New businesses, restaurants, and shops have opened to serve both residents and visitors, especially as tourism in the North Georgia mountains continues to grow. Improvements to roads, schools, and community facilities have helped support a growing population and strengthen the local economy. Outdoor attractions such as hiking trails, Lake Nottely, and Brasstown Bald continue to draw visitors, encouraging development in lodging and recreation services. Despite these changes, Blairsville has worked to balance progress with preserving its natural beauty and historic character, allowing the town to grow without losing its strong sense of community.
-</p>
-
-      <!-- Optional images -->
-      <div class="history-images">
-        <img src="images/blairsville-old-town.jpg" alt="Historic Downtown Blairsville">
-        <img src="images/blairsville-festival.jpg" alt="Blairsville Heritage Festival">
-      </div>
+      <p>
+        Blairsville, Georgia was established in 1835 after Union County was created during the Georgia Gold Rush of the early 1830s. Before European American settlement, the area was home to the Cherokee Nation until they were removed during the Trail of Tears. After the land was opened through a lottery system, farmers and gold seekers settled in the region, building homes, churches, and businesses. Blairsville became the county seat and grew into an important mountain community centered on agriculture and local government.
+      </p>
     </section>
+
+    <section class="history-section">
+      <h2>Historic Landmarks</h2>
+      <p>
+        Blairsville is home to several historic landmarks that reflect its mountain heritage. The Union County Courthouse, built in 1899, stands in the center of town as a symbol of early growth. The Byron Herbert Reece Farm and Heritage Center preserves the home of Georgia poet Byron Herbert Reece and celebrates Appalachian culture. Historic churches, cemeteries, and buildings from the late 1800s offer visitors a glimpse into the past.
+      </p>
+    </section>
+
+    <section class="history-section">
+      <h2>Cultural Heritage</h2>
+      <p>
+        Blairsville’s culture is rooted in Appalachian traditions and mountain life. Bluegrass music, storytelling, handmade crafts, and local festivals continue to shape the community today. Events and fairs bring residents together while honoring both pioneer history and Cherokee heritage. The town values preserving traditions while continuing to grow.
+      </p>
+    </section>
+
+    <section class="history-section">
+      <h2>Modern Development</h2>
+      <p>
+        In recent years, Blairsville has experienced steady growth while maintaining its small-town charm. New businesses and tourism opportunities have strengthened the local economy. Improvements to schools, roads, and community facilities support a growing population, while outdoor attractions like Lake Nottely and Brasstown Bald continue to draw visitors.
+      </p>
+    </section>
+
+    <!-- IMAGE GALLERY -->
+    <section class="history-gallery">
+      <img src="images/blairsville-old-town.jpg" alt="Historic Downtown Blairsville">
+      <img src="images/blairsville-festival.jpg" alt="Blairsville Heritage Festival">
+    </section>
+
   </main>
 
   <!-- FOOTER -->
@@ -74,9 +86,9 @@
 
       <div class="footer-section">
         <h3>Contact</h3>
-        <p>📞 (706) 555-1234</p>
-        <p>📍 Union County, GA</p>
-        <p>✉️ info@communityhub.org</p>
+        <p>(706) 555-1234</p>
+        <p>Union County, GA</p>
+        <p>info@communityhub.org</p>
       </div>
 
       <div class="footer-section">
