--- a/about.html
+++ b/about.html
@@ -24,7 +24,8 @@
    
    <main>
       <h1>About This Project</h1>
-      <p>TSA documentation will be placed here</p>
+      <p>Photo links:</p>
+      <p></p>
    </main>
 
    <footer>
