--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
         <h3>Contact</h3>
         <p>📞 (706) 555-1234</p>
         <p>📍 Union County, GA</p>
-        <p>✉️ info@communityhub.org</p>
+        <p>✉️ info@Blairsvillecommunityhub.org</p>
       </div>
 
       <div class="footer-section">
