--- a/history.html
+++ b/history.html
@@ -83,7 +83,7 @@
         <h3>Contact</h3>
         <p>(706) 555-1234</p>
         <p>Union County, GA</p>
-        <p>info@communityhub.org</p>
+        <p>info@Blairsvillecommunityhub.org</p>
       </div>
 
       <div class="footer-section">
