--- a/ourcommunity.html
+++ b/ourcommunity.html
@@ -31,7 +31,9 @@
   <main>
     <section id="community-intro">
       <h2>About Our Community</h2>
-      <p>Union County is home to amazing resources, community programs, and local organizations that enrich the lives of residents and visitors alike. Explore and connect with these initiatives to make the most of what our community has to offer.</p>
+      <p>Blairsville, Georgia is a welcoming mountain community known for its scenic beauty, friendly residents, and strong sense of tradition. Nestled in the North Georgia mountains, the town offers stunning views, peaceful surroundings, and easy access to outdoor activities like hiking, fishing, boating, and camping. Lake Nottely and Brasstown Bald, the highest point in Georgia, are just minutes away and attract both locals and visitors year-round. Despite its small-town size, Blairsville provides essential services, local businesses, and community events that bring people together and create a supportive environment for families, students, and retirees.</p>
+      <p></p> 
+      <p>What truly makes Blairsville special is its close-knit community spirit. Residents take pride in supporting local schools, churches, small businesses, and volunteer organizations. Seasonal festivals, farmers markets, and holiday celebrations give neighbors the opportunity to connect and celebrate their shared heritage. While the town continues to grow and modernize, it has worked hard to preserve its natural beauty and historic character. Blairsville remains a place where people value tradition, community involvement, and the simple joys of mountain living.</p>
   </main>
 
   <footer>
