--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
         <li><a href="spotlight.html">Spotlight</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="history.html">History</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">Credit</a></li>
       </ul>
     </nav>
   </header>
