--- a/privacy.html
+++ b/privacy.html
@@ -15,7 +15,7 @@
         <li><a href="ourcommunity.html">Our Community</a></li>
         <li><a href="spotlight.html">Spotlight</a></li>
         <li><a href="events.html">Events</a></li>
-        <li><a href="about.html">About</a></li>
+        <li><a href="about.html">Credit</a></li>
       </ul>
     </nav>
     <h1>Privacy Policy</h1>
