--- a/ourcommunity.html
+++ b/ourcommunity.html
@@ -8,11 +8,12 @@
 </head>
 <body>
 
+  <!-- HEADER -->
   <header>
     <nav>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
-        <li><a href="ourcommunity.html">Our Community</a></li>
+        <li><a href="ourcommunity.html" class="active">Our Community</a></li>
         <li><a href="spotlight.html">Spotlight</a></li>
         <li><a href="events.html">Events</a></li>
         <li><a href="history.html">History</a></li>
@@ -20,24 +21,36 @@
       </ul>
     </nav>
 
+    <!-- Hero Section -->
     <section class="community-hero">
-      <div class="hero-text">
-        <h1>Welcome to Our Community</h1>
-        <p>Discover local initiatives, organizations, and resources that make our community thrive.</p>
+      <div class="hero-overlay">
+        <div class="hero-text">
+          <h1>Welcome to Our Community</h1>
+          <p>Discover the people, places, and traditions that make Blairsville special.</p>
+        </div>
       </div>
     </section>
   </header>
 
+  <!-- MAIN CONTENT -->
   <main>
-    <section id="community-intro">
+    <section id="community-intro" class="content-card">
       <h2>About Our Community</h2>
-      <p3>Blairsville, Georgia is a welcoming mountain community known for its scenic beauty, friendly residents, and strong sense of tradition. Nestled in the North Georgia mountains, the town offers stunning views, peaceful surroundings, and easy access to outdoor activities like hiking, fishing, boating, and camping. Lake Nottely and Brasstown Bald, the highest point in Georgia, are just minutes away and attract both locals and visitors year-round. Despite its small-town size, Blairsville provides essential services, local businesses, and community events that bring people together and create a supportive environment for families, students, and retirees.</p3>
-      <p></p> 
-      <p3>What truly makes Blairsville special is its close-knit community spirit. Residents take pride in supporting local schools, churches, small businesses, and volunteer organizations. Seasonal festivals, farmers markets, and holiday celebrations give neighbors the opportunity to connect and celebrate their shared heritage. While the town continues to grow and modernize, it has worked hard to preserve its natural beauty and historic character. Blairsville remains a place where people value tradition, community involvement, and the simple joys of mountain living.</p>
+
+      <p>
+        Blairsville, Georgia is a welcoming mountain community known for its scenic beauty, friendly residents, and strong sense of tradition. Nestled in the North Georgia mountains, the town offers stunning views, peaceful surroundings, and easy access to outdoor activities like hiking, fishing, boating, and camping. Lake Nottely and Brasstown Bald, the highest point in Georgia, are just minutes away and attract both locals and visitors year-round.
+      </p>
+
+      <p>
+        What truly makes Blairsville special is its close-knit community spirit. Residents proudly support local schools, churches, small businesses, and volunteer organizations. Seasonal festivals, farmers markets, and holiday celebrations bring neighbors together and highlight the town’s rich heritage. While Blairsville continues to grow, it remains dedicated to preserving its natural beauty and small-town charm.
+      </p>
+    </section>
   </main>
 
+  <!-- FOOTER -->
   <footer>
     <div class="footer-container">
+
       <div class="footer-section">
         <h3>Main Links</h3>
         <ul>
@@ -46,7 +59,7 @@
           <li><a href="spotlight.html">Spotlight</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="history.html">History</a></li>
-          <li><a href="about.html">About</a></li>
+          <li><a href="about.html">Credit</a></li>
         </ul>
       </div>
 
@@ -54,7 +67,7 @@
         <h3>Contact</h3>
         <p>📞 (706) 555-1234</p>
         <p>📍 Union County, GA</p>
-        <p>✉️ info@Blairsvillecommunityhub.org</p>
+        <p>✉️ info@blairsvillecommunityhub.org</p>
       </div>
 
       <div class="footer-section">
@@ -65,6 +78,7 @@
           <li><a href="refunds.html">Sales & Refunds</a></li>
         </ul>
       </div>
+
     </div>
 
     <div class="footer-bottom">
