--- a/events.html
+++ b/events.html
@@ -29,6 +29,10 @@
 
   <!-- MAIN CONTENT -->
   <main>
+    <section id="event-section"> 
+      <h2> Upcoming Events</h2>
+      <div id="eventlist"></div> 
+    </section>
 
     <!-- CALENDAR -->
     <section id="calendar-section">
