--- a/about.html
+++ b/about.html
@@ -26,14 +26,24 @@
     <h2>Website Documentation</h2>
     <p>This page provides full documentation for my TSA Webmaster project, including sources of information, copyright details, and project logs.</p>
 
-    <!-- Sources of Information -->
-    <h3>Sources of Information</h3>
-    <ul>
-      <li>Union County Government. <em>Official Website.</em> 2026. <a href="https://www.unioncountyga.gov" target="_blank">https://www.unioncountyga.gov</a></li>
-      <li>Union General Hospital. <em>Community Services.</em> 2026. <a href="https://www.uniongeneralhospital.org" target="_blank">https://www.uniongeneralhospital.org</a></li>
-      <li>Georgia Department of Veterans Service. 2026. <a href="https://veterans.georgia.gov" target="_blank">https://veterans.georgia.gov</a></li>
-      <li>Font Awesome. Free icons. <a href="https://fontawesome.com" target="_blank">https://fontawesome.com</a></li>
-    </ul>
+    <section id="website-links">
+  <h2>Website Links (MLA Format)</h2>
+  <p>Butternut Creek Festival. *Butternut Creek Festival*, 2026, <a href="https://www.butternutcreekfestival.com/" target="_blank">https://www.butternutcreekfestival.com/</a>. Accessed 12 Feb. 2026.</p>
+
+  <p>Union County History Museum. *Mountain Heritage Festival*, 2026, <a href="https://www.unioncountyhistory.org/" target="_blank">https://www.unioncountyhistory.org/</a>. Accessed 12 Feb. 2026.</p>
+
+  <p>Georgia State Parks. *Vogel State Park - Mountain Music Day*, 2026, <a href="https://gastateparks.org/Vogel" target="_blank">https://gastateparks.org/Vogel</a>. Accessed 12 Feb. 2026.</p>
+
+  <p>Warrior Races. *BEAR Blairsville Extreme Adventure Race*, 2026, <a href="https://www.warriorraces.com/bear" target="_blank">https://www.warriorraces.com/bear</a>. Accessed 12 Feb. 2026.</p>
+
+  <p>Indian Summer Festival. *Indian Summer Festival*, 2026, <a href="https://www.indiansummerfestival.org/" target="_blank">https://www.indiansummerfestival.org/</a>. Accessed 12 Feb. 2026.</p>
+
+  <p>Sorghum in the Mountains. *Sorghum in the Mountains Festival*, 2026, <a href="https://www.sorghuminthemountains.com/" target="_blank">https://www.sorghuminthemountains.com/</a>. Accessed 12 Feb. 2026.</p>
+
+  <p>Visit Blairsville. *Valentine’s Day Music Bingo at Lucky’s*, 2026, <a href="https://members.visitblairsvillega.com/events/details/valentine-s-day-music-bingo-at-lucky-s-143214" target="_blank">https://members.visitblairsvillega.com/events/details/valentine-s-day-music-bingo-at-lucky-s-143214</a>. Accessed 12 Feb. 2026.</p>
+
+  <p>Downtown Blairsville. *The Chocolate Walk*, 2026, <a href="https://www.downtownblairsvillega.com/events/the-chocolate-walk" target="_blank">https://www.downtownblairsvillega.com/events/the-chocolate-walk</a>. Accessed 12 Feb. 2026.</p>
+</section>
 
     <!-- Copyright Documentation -->
     <h3>Copyright Documentation</h3>
