--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
 
     <!-- Student Copyright Checklist PDF -->
     <h3>Student Copyright Checklist</h3>
-    <p><a href="https://docs.google.com/document/d/1GPSUZr6zhbBZzB3NZvuFksoMfocPRbvQl7PKVJ4AdZY/edit?tab=t.0" target="_blank">Download Student Copyright Checklist (PDF)</a></p>
+    <p><a href="https://drive.google.com/file/d/1cNJFnjPFVt8FLKnJMhNzqDoXF0mpP91q/view" target="_blank">Download Student Copyright Checklist (PDF)</a></p>
 
     <!-- Plan of Work Log PDF -->
     <h3>Plan of Work Log</h3>
