--- a/events.html
+++ b/events.html
@@ -26,6 +26,21 @@
     <h1>Discover Local Events</h1>
     <p>Stay connected! Explore upcoming activities, workshops, festivals, and community gatherings happening around Union County. Join in, learn something new, and meet your neighbors!</p>
   </header>
+</section>
+
+<section class="map-section">
+  <h2>Union County, Georgia</h2>
+
+  <!-- Your copied iframe goes right here -->
+  <iframe 
+    src="<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d186713.86155981684!2d-84.14490805896702!3d34.813946979177224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x885f169b0a4aec8f%3A0x86da54c95bd9f4f9!2sUnion%20County%2C%20GA!5e1!3m2!1sen!2sus!4v1770916978761!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>"
+    width="100%" 
+    height="400" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy">
+  </iframe>
+
 
   <!-- MAIN CONTENT -->
   <main>
