--- a/about.html
+++ b/about.html
@@ -56,11 +56,11 @@
 
     <!-- Student Copyright Checklist PDF -->
     <h3>Student Copyright Checklist</h3>
-    <p><a href="https://mail.google.com/mail/u/0/?pli=1#inbox?projector=1" target="_blank">Download Student Copyright Checklist (PDF)</a></p>
+    <p><a href="https://mail.google.com/mail/u/0/?pli=1#inbox?projector=1" target="_blank">View Student Copyright Checklist (PDF)</a></p>
 
     <!-- Plan of Work Log PDF -->
     <h3>Plan of Work Log</h3>
-    <p><a href="plan-of-work.pdf" target="_blank">Download Plan of Work Log (PDF)</a></p>
+    <p><a href="plan-of-work.pdf" target="_blank">View Plan of Work Log (PDF)</a></p>
   </section>
 
    <footer>
