--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 
     <!-- Plan of Work Log PDF -->
     <h3>Plan of Work Log</h3>
-    <p><a href="plan-of-work.pdf" target="_blank">View Plan of Work Log (PDF)</a></p>
+    <p><a href="Plan of Work - pdf.pdf" target="_blank">View Plan of Work Log (PDF)</a></p>
   </section>
 
    <footer>
