--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
   
   <head>
     <meta charset="UTF-8">
-    <title>About | TSA Webmaster</title>
+    <title>Credit | TSA Webmaster</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -24,25 +24,25 @@
    
    <section class="documentation">
     <h2>Website Documentation</h2>
-    <p>This page provides full documentation for my TSA Webmaster project, including sources of information, copyright details, and project logs.</p>
+    <p>This page provides full documentation for our TSA Webmaster project, including sources of information, copyright details, and project logs.</p>
 
     <section id="website-links">
-  <h2>Website Links (MLA Format)</h2>
-  <p>Butternut Creek Festival. *Butternut Creek Festival*, 2026, <a href="https://www.butternutcreekfestival.com/" target="_blank">https://www.butternutcreekfestival.com/</a>. Accessed 12 Feb. 2026.</p>
+  <h2>Website Links</h2>
+  <p>Butternut Creek Festival. *Butternut Creek Festival*, 2026, <a href="https://www.butternutcreekfestival.com/" target="_blank">https://www.butternutcreekfestival.com/</a>. Accessed 02 Feb. 2026.</p>
 
-  <p>Union County History Museum. *Mountain Heritage Festival*, 2026, <a href="https://www.unioncountyhistory.org/" target="_blank">https://www.unioncountyhistory.org/</a>. Accessed 12 Feb. 2026.</p>
+  <p>Union County History Museum. *Mountain Heritage Festival*, 2026, <a href="https://www.unioncountyhistory.org/" target="_blank">https://www.unioncountyhistory.org/</a>. Accessed 02 Feb. 2026.</p>
 
-  <p>Georgia State Parks. *Vogel State Park - Mountain Music Day*, 2026, <a href="https://gastateparks.org/Vogel" target="_blank">https://gastateparks.org/Vogel</a>. Accessed 12 Feb. 2026.</p>
+  <p>Georgia State Parks. *Vogel State Park - Mountain Music Day*, 2026, <a href="https://gastateparks.org/Vogel" target="_blank">https://gastateparks.org/Vogel</a>. Accessed 02 Feb. 2026.</p>
 
-  <p>Warrior Races. *BEAR Blairsville Extreme Adventure Race*, 2026, <a href="https://www.warriorraces.com/bear" target="_blank">https://www.warriorraces.com/bear</a>. Accessed 12 Feb. 2026.</p>
+  <p>Warrior Races. *BEAR Blairsville Extreme Adventure Race*, 2026, <a href="https://www.warriorraces.com/bear" target="_blank">https://www.warriorraces.com/bear</a>. Accessed 02 Feb. 2026.</p>
 
-  <p>Indian Summer Festival. *Indian Summer Festival*, 2026, <a href="https://www.indiansummerfestival.org/" target="_blank">https://www.indiansummerfestival.org/</a>. Accessed 12 Feb. 2026.</p>
+  <p>Indian Summer Festival. *Indian Summer Festival*, 2026, <a href="https://www.indiansummerfestival.org/" target="_blank">https://www.indiansummerfestival.org/</a>. Accessed 02 Feb. 2026.</p>
 
-  <p>Sorghum in the Mountains. *Sorghum in the Mountains Festival*, 2026, <a href="https://www.sorghuminthemountains.com/" target="_blank">https://www.sorghuminthemountains.com/</a>. Accessed 12 Feb. 2026.</p>
+  <p>Sorghum in the Mountains. *Sorghum in the Mountains Festival*, 2026, <a href="https://www.sorghuminthemountains.com/" target="_blank">https://www.sorghuminthemountains.com/</a>. Accessed 02 Feb. 2026.</p>
 
-  <p>Visit Blairsville. *Valentine’s Day Music Bingo at Lucky’s*, 2026, <a href="https://members.visitblairsvillega.com/events/details/valentine-s-day-music-bingo-at-lucky-s-143214" target="_blank">https://members.visitblairsvillega.com/events/details/valentine-s-day-music-bingo-at-lucky-s-143214</a>. Accessed 12 Feb. 2026.</p>
+  <p>Visit Blairsville. *Valentine’s Day Music Bingo at Lucky’s*, 2026, <a href="https://members.visitblairsvillega.com/events/details/valentine-s-day-music-bingo-at-lucky-s-143214" target="_blank">https://members.visitblairsvillega.com/events/details/valentine-s-day-music-bingo-at-lucky-s-143214</a>. Accessed 02 Feb. 2026.</p>
 
-  <p>Downtown Blairsville. *The Chocolate Walk*, 2026, <a href="https://www.downtownblairsvillega.com/events/the-chocolate-walk" target="_blank">https://www.downtownblairsvillega.com/events/the-chocolate-walk</a>. Accessed 12 Feb. 2026.</p>
+  <p>Downtown Blairsville. *The Chocolate Walk*, 2026, <a href="https://www.downtownblairsvillega.com/events/the-chocolate-walk" target="_blank">https://www.downtownblairsvillega.com/events/the-chocolate-walk</a>. Accessed 02 Feb. 2026.</p>
 </section>
 
     <!-- Copyright Documentation -->
