--- a/about.html
+++ b/about.html
@@ -50,8 +50,7 @@
     <ul>
       <li>Hospital image – Source: <a href="https://www.uniongeneralhospital.org" target="_blank">Union General Hospital</a> – Used for educational purposes.</li>
       <li>Veterans Affairs logo – Source: <a href="https://veterans.georgia.gov" target="_blank">Georgia Department of Veterans Service</a> – Used for educational purposes.</li>
-      <li>Icons – Font Awesome – Free license (<a href="https://fontawesome.com" target="_blank">https://fontawesome.com</a>).</li>
-      <li>Website design and code – Created by Alban Hawley.</li>
+      <li>Website design and code – Created by Alban Hawley and Tyler Hawley.</li>
     </ul>
 
     <!-- Student Copyright Checklist PDF -->
