--- a/history.html
+++ b/history.html
@@ -33,33 +33,30 @@
   <!-- MAIN CONTENT -->
   <main class="history-container">
 
-    <section class="history-section">
-      <h2>Early Settlement</h2>
-      <p>
-        Blairsville, Georgia was established in 1835 after Union County was created during the Georgia Gold Rush of the early 1830s. Before European American settlement, the area was home to the Cherokee Nation until they were removed during the Trail of Tears. After the land was opened through a lottery system, farmers and gold seekers settled in the region, building homes, churches, and businesses. Blairsville became the county seat and grew into an important mountain community centered on agriculture and local government.
-      </p>
-    </section>
+  <section id="history">
+    <h1>History of Blairsville, Georgia</h1>
 
-    <section class="history-section">
-      <h2>Historic Landmarks</h2>
-      <p>
-        Blairsville is home to several historic landmarks that reflect its mountain heritage. The Union County Courthouse, built in 1899, stands in the center of town as a symbol of early growth. The Byron Herbert Reece Farm and Heritage Center preserves the home of Georgia poet Byron Herbert Reece and celebrates Appalachian culture. Historic churches, cemeteries, and buildings from the late 1800s offer visitors a glimpse into the past.
-      </p>
-    </section>
+  <article class="history-section">
+    <h2>Early Settlement</h2>
+    <p>Blairsville, Georgia, was established in 1835 after Union County was created during the Georgia Gold Rush of the early 1830s. Before European American settlement, the area was home to the Cherokee Nation until they were removed during the Trail of Tears. After the land was opened through a lottery system, farmers and gold seekers settled in the region, building homes, churches, and businesses. Blairsville became the county seat and grew into an important mountain community centered on agriculture and local government.</p>
+  </article>
 
-    <section class="history-section">
-      <h2>Cultural Heritage</h2>
-      <p>
-        Blairsville’s culture is rooted in Appalachian traditions and mountain life. Bluegrass music, storytelling, handmade crafts, and local festivals continue to shape the community today. Events and fairs bring residents together while honoring both pioneer history and Cherokee heritage. The town values preserving traditions while continuing to grow.
-      </p>
-    </section>
+  <article class="history-section">
+    <h2>Historic Landmarks</h2>
+    <p>Blairsville is home to several historic landmarks that reflect its mountain heritage. The Union County Courthouse, built in 1899, stands in the center of town as a symbol of early growth. The Byron Herbert Reece Farm and Heritage Center preserves the home of Georgia poet Byron Herbert Reece and celebrates Appalachian culture. Historic churches, cemeteries, and buildings from the late 1800s offer visitors a glimpse into the past.</p>
+  </article>
 
-    <section class="history-section">
-      <h2>Modern Development</h2>
-      <p>
-        In recent years, Blairsville has experienced steady growth while maintaining its small-town charm. New businesses and tourism opportunities have strengthened the local economy. Improvements to schools, roads, and community facilities support a growing population, while outdoor attractions like Lake Nottely and Brasstown Bald continue to draw visitors.
-      </p>
-    </section>
+  <article class="history-section">
+    <h2>Cultural Heritage</h2>
+    <p>Blairsville’s culture is rooted in Appalachian traditions and mountain life. Bluegrass music, storytelling, handmade crafts, and local festivals continue to shape the community today. Events and fairs bring residents together while honoring both pioneer history and Cherokee heritage. The town values preserving traditions while continuing to grow.</p>
+  </article>
+
+  <article class="history-section">
+    <h2>Modern Development</h2>
+    <p>In recent years, Blairsville has experienced steady growth while maintaining its small-town charm. New businesses and tourism opportunities have strengthened the local economy. Improvements to schools, roads, and community facilities support a growing population, while outdoor attractions like Lake Nottely and Brasstown Bald continue to draw visitors.</p>
+  </article>
+</section>
+
 
 
   </main>
