--- a/history.html
+++ b/history.html
@@ -78,9 +78,9 @@
 
       <div class="footer-section">
         <h3>Contact</h3>
-        <p>(706) 555-1234</p>
-        <p>Union County, GA</p>
-        <p>info@Blairsvillecommunityhub.org</p>
+        <p>📞 (706) 555-1234</p>
+        <p>📍 Union County, GA</p>
+        <p>✉️ info@Blairsvillecommunityhub.org</p>
       </div>
 
       <div class="footer-section">
