--- a/about.html
+++ b/about.html
@@ -24,7 +24,9 @@
    
    <section class="documentation">
     <h2>Website Documentation</h2>
-    <p>This page provides full documentation for our TSA Webmaster project, including sources of information, copyright details, and project logs.</p>
+    <p>All content built on top of these frameworks is the original work of the UCHS TSA Webmaster Team.
+
+</p>
 
     <section id="website-links">
   <h2>Website Links</h2>
