--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 </p>
 
     <section id="website-links">
-  <h2>Website Links</h2>
+  <h2>Website Documentation</h2>
   <p>Butternut Creek Festival. *Butternut Creek Festival*, 2026, <a href="https://www.butternutcreekfestival.com/" target="_blank">https://www.butternutcreekfestival.com/</a>. Accessed 02 Feb. 2026.</p>
 
   <p>Union County History Museum. *Mountain Heritage Festival*, 2026, <a href="https://www.unioncountyhistory.org/" target="_blank">https://www.unioncountyhistory.org/</a>. Accessed 02 Feb. 2026.</p>
