--- a/about.html
+++ b/about.html
@@ -101,19 +101,19 @@
     <section id="works-cited">
   <h2>Event Documentation</h2>
 
-  <p>“Butternut Creek Festival.” <em>Butternut Creek Festival</em>, https://www.butternutcreekfestival.com/. Accessed 13 Feb. 2026.</p>
+  <p>“Butternut Creek Festival.” <em>Butternut Creek Festival</em>, <a href="https://www.butternutcreekfestival.com/"</a> Accessed 13 Feb. 2026.</p>
 
-  <p>“Downtown Blairsville Chocolate Walk.” <em>Downtown Blairsville</em>, https://www.downtownblairsvillega.com/events/the-chocolate-walk. Accessed 13 Feb. 2026.</p>
+  <p>“Downtown Blairsville Chocolate Walk.” <em>Downtown Blairsville</em>, <a href="https://www.downtownblairsvillega.com/events/the-chocolate-walk"</a> Accessed 13 Feb. 2026.</p>
 
-  <p>“Indian Summer Festival.” <em>Indian Summer Festival</em>, https://www.indiansummerfestival.org/. Accessed 13 Feb. 2026.</p>
+  <p>“Indian Summer Festival.” <em>Indian Summer Festival</em>, <a href="https://www.indiansummerfestival.org/"</a> Accessed 13 Feb. 2026.</p>
 
-  <p>“Mountain Heritage Festival.” <em>Union County Historical Society</em>, https://www.unioncountyhistory.org/. Accessed 13 Feb. 2026.</p>
+  <p>“Mountain Heritage Festival.” <em>Union County Historical Society</em>, <a href="https://www.unioncountyhistory.org/"</a> Accessed 13 Feb. 2026.</p>
 
-  <p>“Mountain Music Day at Vogel State Park.” <em>Georgia State Parks</em>, https://gastateparks.org/Vogel. Accessed 13 Feb. 2026.</p>
+  <p>“Mountain Music Day at Vogel State Park.” <em>Georgia State Parks</em>, <a href="https://gastateparks.org/Vogel"</a> Accessed 13 Feb. 2026.</p>
 
-  <p>“Sorghum in the Mountains Festival.” <em>Sorghum in the Mountains</em>, https://www.sorghuminthemountains.com/. Accessed 13 Feb. 2026.</p>
+  <p>“Sorghum in the Mountains Festival.” <em>Sorghum in the Mountains</em>, <a href="https://www.sorghuminthemountains.com/"</a> Accessed 13 Feb. 2026.</p>
 
-  <p>“Valentine’s Day Music Bingo at Lucky’s.” <em>Visit Blairsville Georgia</em>, https://members.visitblairsvillega.com/events/details/valentine-s-day-music-bingo-at-lucky-s-143214. Accessed 13 Feb. 2026.</p>
+  <p>“Valentine’s Day Music Bingo at Lucky’s.” <em>Visit Blairsville Georgia</em>, <a href="https://members.visitblairsvillega.com/events/details/valentine-s-day-music-bingo-at-lucky-s-143214"</a> Accessed 13 Feb. 2026.</p>
 
 </section>
 
